# geospatial-atlas

./: .gitignore  .prettierignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  algorithms.html  data-formats.html  develop.html  embedding-atlas.html  embedding-view-mosaic.html  embedding-view.html  hashmap.json  index.html  overview.html  package-lock.json  package.json  playwright.config.ts  streamlit.html  tool.html  widget.html
app/: index.html
app-mac/: README.md  index.html  package.json  tsconfig.json  vite.config.js
app-mac/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app-mac/src-tauri/capabilities/: default.json
app-mac/src-tauri/icons/: icon.icns  make_icons.py
app-mac/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns  make_icons.py
apps/desktop/src-tauri/src/: lib.rs
assets/: algorithms.md.BxfbtTGv.js  algorithms.md.BxfbtTGv.lean.js  algorithms.md.Bxn6OSMS.js  algorithms.md.Bxn6OSMS.lean.js  app.Bj-naJ0L.js  app.CdDM31iB.js  app.M_zALypg.js  data-formats.md.D8Z0n6jv.js  data-formats.md.D8Z0n6jv.lean.js  develop.md.DSayiedo.js  develop.md.DSayiedo.lean.js  develop.md.d1X0O_ea.js  develop.md.d1X0O_ea.lean.js  embedding-atlas.md.Buk4szkj.js  embedding-atlas.md.Buk4szkj.lean.js  embedding-atlas.md.Cp3RJ0M1.js  embedding-atlas.md.Cp3RJ0M1.lean.js  embedding-atlas.md.IV-YI3ea.js  embedding-atlas.md.IV-YI3ea.lean.js  embedding-view-mosaic.md.D1kENuAb.js  embedding-view-mosaic.md.D1kENuAb.lean.js  embedding-view-mosaic.md.DbEFa60n.js  embedding-view-mosaic.md.DbEFa60n.lean.js  embedding-view-mosaic.md.Dsz4eQmq.js  embedding-view-mosaic.md.Dsz4eQmq.lean.js  embedding-view.md.B5vBRaHr.js  embedding-view.md.B5vBRaHr.lean.js  embedding-view.md.Dh1FqARA.js  embedding-view.md.Dh1FqARA.lean.js  index.md.Cet3Ydbm.js  (+25 more)
(+108 files in other folders)
