[package]
name = "geospatial-atlas-desktop"
version = "0.0.1"
description = "Native WebGPU-compatible viewer for geospatial & embedding data"
authors = ["Dominik Weckmüller"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "geospatial_atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread", "process", "io-util"] }
portpicker = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
